chore scaffold api & project structure
