# src/app/trades/api/TradeRouter.ts
@@ -1,0 +1,26 @@
+import { Router } from "express";
+
+import {
+  createTradeExecution,
+  getTradeExecutions,
+  quoteTradeExecution,
+  cancelTradeExecution,
+  getTradeExecutionsPrices,
+  getTradeConfirmations,
+  getTradeErrors,
+} from "./TradeController";
+
+const tradeRouter = Router();
+
+tradeRouter.get("/tradeExecutions", getTradeExecutions);
+tradeRouter.get("/tradeConfirmations", getTradeConfirmations);
+tradeRouter.get("/tradeErrors", getTradeErrors);
+
+tradeRouter.post("/tradeExecutions", createTradeExecution);
+tradeRouter.put("/tradeExecutions/:id", cancelTradeExecution);
+
+tradeRouter.get("/tradeExecutions/prices", getTradeExecutionsPrices);
+tradeRouter.post("/quotes", quoteTradeExecution);
+
+
+export { tradeRouter };
